<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--using constrain layout because it make you free to add item freely in the Layout and make relations between views i use it here to make textViews and Buttons in relation in position -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#566781"
        tools:context=".LoginFragment">

        <TextView
            android:id="@+id/email"
            style="@style/loginTextStyle"
            android:layout_marginStart="8dp"
            android:text="@string/login_text1"
            app:layout_constraintBaseline_toBaselineOf="@+id/password"
            app:layout_constraintEnd_toStartOf="@+id/password"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/password"
            style="@style/loginTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.437" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="170sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#F5F5F6"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberPassword"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumberPassword"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="#F5F5F6"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="numberPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/logging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/logging"
            app:layout_constraintBaseline_toBaselineOf="@+id/newLogin"
            app:layout_constraintEnd_toStartOf="@+id/newLogin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/newLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/newLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/logging"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>